<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>nz.ac.wgtn.ecs</groupId>
        <artifactId>jdala</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>jdala-shaded</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <!--                    <shadedArtifactAttached>true</shadedArtifactAttached>-->
                            <relocations>
                                <relocation>
                                    <pattern>org.json</pattern>
                                    <shadedPattern>shaded.org.json</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.plumelib.util</pattern>
                                    <shadedPattern>shaded.org.plumelib.util</shadedPattern>
                                </relocation>
                            </relocations>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.access=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.util.random=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.plumelib</groupId>
            <artifactId>plume-util</artifactId>
            <version>1.10.0</version>
<!--            <scope>runtime</scope>-->
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250107</version>
        </dependency>
    </dependencies>

</project>